Fix alignment issues

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -5,15 +5,19 @@ table.main-table {
   text-align: left;
   padding: 20px 20px 20px 20px;
 }
-th.row-title {
-  width: 40%;
+th.row-title { 
+  width: 30%;
   text-align: right;
+  padding: 0px;
   padding-right: 20px;
 }
 td.row-content {
   width: 40%;
   text-align: left;
-  padding: 5px;
+  padding: 0px;
+  padding-top: 0px;
+  margin: 10px;
+  max-width: 400px;
 }
 
 #app {
